--- a/ForeScore.Data/ForeScore.Data.csproj
+++ b/ForeScore.Data/ForeScore.Data.csproj
@@ -74,6 +74,10 @@
     <Compile Include="Migrations\202111080153218_HoleDataMigration.Designer.cs">
       <DependentUpon>202111080153218_HoleDataMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111080214229_CourseName.cs" />
+    <Compile Include="Migrations\202111080214229_CourseName.Designer.cs">
+      <DependentUpon>202111080214229_CourseName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -99,6 +103,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202111080153218_HoleDataMigration.resx">
       <DependentUpon>202111080153218_HoleDataMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111080214229_CourseName.resx">
+      <DependentUpon>202111080214229_CourseName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
