--- a/ForeScore.Data/ForeScore.Data.csproj
+++ b/ForeScore.Data/ForeScore.Data.csproj
@@ -82,6 +82,14 @@
     <Compile Include="Migrations\202111081658152_UserIdsToFollowEntities.Designer.cs">
       <DependentUpon>202111081658152_UserIdsToFollowEntities.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111090322462_FollowedBy.cs" />
+    <Compile Include="Migrations\202111090322462_FollowedBy.Designer.cs">
+      <DependentUpon>202111090322462_FollowedBy.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202111090329153_UpdatedEntities.cs" />
+    <Compile Include="Migrations\202111090329153_UpdatedEntities.Designer.cs">
+      <DependentUpon>202111090329153_UpdatedEntities.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -113,6 +121,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202111081658152_UserIdsToFollowEntities.resx">
       <DependentUpon>202111081658152_UserIdsToFollowEntities.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111090322462_FollowedBy.resx">
+      <DependentUpon>202111090322462_FollowedBy.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111090329153_UpdatedEntities.resx">
+      <DependentUpon>202111090329153_UpdatedEntities.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
