--- a/ForeScore.WebMVC/ForeScore.WebMVC.csproj
+++ b/ForeScore.WebMVC/ForeScore.WebMVC.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Controllers\FollowController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\RoundController.cs" />
     <Compile Include="Controllers\UserCareerController.cs" />
     <Compile Include="Global.asax.cs">
@@ -258,6 +259,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Post\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
