--- a/ForeScore.WebMVC/ForeScore.WebMVC.csproj
+++ b/ForeScore.WebMVC/ForeScore.WebMVC.csproj
@@ -258,7 +258,7 @@
     <Content Include="Views\Follow\Delete.cshtml" />
     <Content Include="Views\Post\Index.cshtml" />
     <Content Include="Views\Post\SelectRound.cshtml" />
-    <Content Include="Views\Post\Create.cshtml" />
+    <Content Include="Views\Post\CreatePost.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
