--- a/ForeScore.Data/ForeScore.Data.csproj
+++ b/ForeScore.Data/ForeScore.Data.csproj
@@ -97,6 +97,10 @@
     <Compile Include="Migrations\202111100108314_NameProperty.Designer.cs">
       <DependentUpon>202111100108314_NameProperty.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111131444022_CourseName1.cs" />
+    <Compile Include="Migrations\202111131444022_CourseName1.Designer.cs">
+      <DependentUpon>202111131444022_CourseName1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -140,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202111100108314_NameProperty.resx">
       <DependentUpon>202111100108314_NameProperty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111131444022_CourseName1.resx">
+      <DependentUpon>202111131444022_CourseName1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
