--- a/ForeScore.Services/ForeScore.Services.csproj
+++ b/ForeScore.Services/ForeScore.Services.csproj
@@ -84,6 +84,7 @@
     <Compile Include="PostServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoundServices.cs" />
+    <Compile Include="TeeTimeServices.cs" />
     <Compile Include="UserCareerServices.cs" />
   </ItemGroup>
   <ItemGroup>
