--- a/ForeScore.WebMVC/ForeScore.WebMVC.csproj
+++ b/ForeScore.WebMVC/ForeScore.WebMVC.csproj
@@ -265,10 +265,11 @@
     <Content Include="Views\Post\Delete.cshtml" />
     <Content Include="Views\Post\Comment.cshtml" />
     <Content Include="Views\Post\CommentDelete.cshtml" />
+    <Content Include="Views\TeeTime\Index.cshtml" />
+    <Content Include="Views\TeeTime\SelectCourse.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\TeeTime\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
