--- a/ForeScore.WebMVC/ForeScore.WebMVC.csproj
+++ b/ForeScore.WebMVC/ForeScore.WebMVC.csproj
@@ -268,6 +268,8 @@
     <Content Include="Views\TeeTime\Index.cshtml" />
     <Content Include="Views\TeeTime\SelectCourse.cshtml" />
     <Content Include="Views\TeeTime\Create.cshtml" />
+    <Content Include="Views\TeeTime\Details.cshtml" />
+    <Content Include="Views\TeeTime\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
