--- a/ForeScore.WebMVC/ForeScore.WebMVC.csproj
+++ b/ForeScore.WebMVC/ForeScore.WebMVC.csproj
@@ -363,10 +363,10 @@
     <Content Include="Views\TeeTime\Details.cshtml" />
     <Content Include="Views\TeeTime\Delete.cshtml" />
     <Content Include="Views\Follow\Details.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\DateTimeOffset.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Shared\DisplayTemplates\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
